[package]
name = "tests"
version = "1.5.1"
edition = "2021"

[dependencies]
casper-engine-test-support = { version = "7.0.1", default-features = false }
casper-execution-engine = { version = "7.0.1", default-features = false }
casper-types = { version = "4.0.1", default-features = false }
casper-fixtures = { git = "https://github.com/deuszex/casper-fixtures" }
once_cell = "1"
contract = { path = "../contract", default-features = false }
serde = { version = "1.0.80", default-features = false }
serde_json = { version = "1.0.59", default-features = false }
blake2 = { version = "0.9.0", default-features = false }
base16 = { version = "0.2.1", default-features = false }
rand = "0.7.0"
sha256 = "1.0.3"
casper-event-standard = { version = "0.5.0", default-features = false }

[[bin]]
name = "fixture_gen"
path = "src/fixture_gen.rs"
bench = false
doctest = false
